# code-guardian

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GOAP_OPTIMIZATION_RESULTS.md  LICENSE  Makefile  README.md  cliff.toml  clippy.toml  coverage.lcov  custom_detectors.json  deny.toml  lcov.info  opencode.json  ruleset.json  rustfmt.toml  tmp_rovodev_fast_makefile_targets.mk
.cargo/: config.toml  config.toml.bak
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_TEMPLATE.md  SECURITY.md  actions-security.md  branch-protection-config.json  dependabot.yml  pull_request_template.md  release-please-config.json  repository-ruleset.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/config/: test-matrix.json
.github/workflow-templates/: basic-ci.yml  comprehensive-ci.yml
.github/workflows/: auto-fix.yml  changelog-sync.yml  ci.yml  docs.yml  enhanced-ci.yml  enhanced-release.yml  monitor.yml  optimized-ci.yml  performance.yml  release-consolidated.yml  release-please.yml  release.yml  security-config.yml  security-consolidated.yml  security-enhancements.yml  security.yml  stale.yml  version-sync.yml
.memory/: github_actions_learnings.md
.opencode/: .eslintrc.cjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json
.opencode/agent/: action-yml-checker.md  agent-coordinator.md  analysis-swarm-coordinator.md  atomic-commit-creator.md  ci-agent.md  clean-code-developer.md  cli-agent.md  code-review-agent.md  codebase-analyzer.md  codebase-consolidator.md  codebase-locator.md  codebase-pattern-finder.md  command-interpreter.md  context7-mcp-agent.md  core-agent.md  dependency-package-updater.md  deployment-agent.md  docs-agent.md  docs-command-verifier.md  false-positive-validator.md  general.md  git-handler.md  github.md  goap-planner.md  hive-mind-orchestrator.md  opencode-agent-manager.md  opencode-plugin-agent-creator.md  output-agent.md  package-updater.md  perplexity-analyzer.md  perplexity-researcher-deep.md  perplexity-researcher-pro.md  perplexity-researcher-reasoning-pro.md  perplexity-researcher-reasoning.md  perplexity-researcher.md  rust-codebase-analyzer.md  rust-codebase-locator.md  rust-expert-agent.md  rust-performance-optimizer.md  rust-security-auditor.md  (+3 more)
.opencode/command/: atomic-commit.md  cargo-build.md  cargo-check.md  cargo-clippy.md  cargo-fmt.md  cargo-test.md  deps-update.md  issue-manage.md  performance-benchmark.md  pr-create.md  release.md  security-audit.md  version-bump.md  workflow-bugfix.md  workflow-new-feature.md
.opencode/plugin/: github-integration.js  workflow-automation.js
.opencode/tool/: cargo-runner.ts
.rovodev/subagents/: clean-code-developer.md
coverage-report/: lcov.info
coverage/html/: index.html
crates/cli/: Cargo.toml
crates/cli/src/: advanced_handlers.rs  benchmark.rs  cli_definitions.rs  command_handlers.rs  comparison_handlers.rs  git_integration.rs  lib.rs  main.rs  production_handlers.rs  report_handlers.rs  scan_handlers.rs  stack_presets.rs  tests.rs  utils.rs
crates/cli/src/commands/: mod.rs  report.rs  scan.rs
crates/cli/tests/: advanced_handlers_tests.rs  cli.rs  cli_coverage_boost.rs  git_integration_tests.rs  handler_coverage_tests.rs  health_server_tests.rs  integration_workflow_tests.rs  production_handlers_tests.rs  robust_coverage_tests.rs  test_helpers.rs  tests.rs
crates/core/: Cargo.toml
crates/core/benches/: performance_comparison.rs  scanner_benchmark.rs
crates/core/src/: benchmark_suite.rs  cache.rs  config.rs  custom_detectors.rs  detector_factory.rs  detectors.rs  distributed.rs  enhanced_config.rs  errors.rs  health_checks.rs  health_server.rs  incremental.rs  lib.rs  llm_detectors.rs  metrics.rs  monitoring.rs  observability.rs  optimized_scanner.rs  performance.rs  performance_analyzer.rs  performance_dashboard.rs  performance_optimized_scanner.rs  performance_optimizer.rs
crates/core/tests/: performance_optimization_tests.rs  performance_regression_tests.rs  property_based_tests.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs
crates/output/src/formatters/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  text.rs
crates/output/src/formatters/snapshots/: code_guardian_output__formatters__text__tests__multiple_matches_snapshot.snap
crates/output/tests/: integration_tests.rs  performance_tests.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: V1__initial_schema.sql
crates/storage/src/: lib.rs
docs/: BEST_PRACTICES.md  BRANCH_PROTECTION_SETUP.md  README.md  RELEASE_MANAGEMENT.md  book.toml  version-management.md
docs/api/: README.md  performance-metrics.md
docs/architecture/: performance-architecture.md
docs/book/: 404.html  CHANGELOG.html  LICENSE.html  SECURITY.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/configuration/: schema.md
docs/integrations/: ci-cd.md
examples/: README.md  cli_demo.md  custom_config.toml  custom_detectors.json  git_integration_demo.md  health_monitoring_demo.md  health_server_demo.sh  llm_detection_demo.md  production_ready_config.toml  production_ready_scan_demo.md
performance/: config.json  monitor_state.json
plans/: 01-complete-stalled-quality-check.md  02-test-coverage-analysis.md  03-performance-optimization.md  04-documentation-as-code.md  05-production-readiness-review.md  custom_detector_implementation_plan.md  goap-quality-check-coordination.md
scripts/: README.md  cli-docs-generator.rs  common.sh  continuous-monitor.sh  coverage-dashboard.sh  dev-workflow.sh  fix-code-quality.sh  generate-config-docs.rs  generate-docs.sh  generate-performance-report.sh  github-api-setup.py  incremental-check.sh  package.json  performance-dashboard-server.py  performance-dashboard.html  performance-integration.sh  performance-monitor.sh  pre-commit.sh  release-management.sh  setup-branch-protection.sh  setup-repository-ruleset.js  setup-sccache.sh  test-enhancements.sh  verify-best-practices.sh  version-manager.sh
(+131 files in other folders)
