[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/output",
    "crates/cli"
]
resolver = "2"

[workspace.lints.clippy]
correctness = "deny"
style = "warn"
complexity = "warn"
perf = "warn"
suspicious = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
restriction = "allow"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Pattern Matching
regex = "1.10"
lazy_static = "1.4"

# File System
walkdir = "2.5"
ignore = "0.4"

# Concurrency
rayon = "1.10"
num_cpus = "1.16"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "time"] }

# Logging and Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal Output
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"

# Configuration
config = "0.14"

# Git Integration (optional)
git2 = "0.19"

# Testing
proptest = "1.5"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
