[package]
name = "code_guardian_cli"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = "4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
config = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true, optional = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

code-guardian-core = { path = "../core" }
code-guardian-storage = { path = "../storage" }
code-guardian-output = { path = "../output" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[features]
default = []
git = ["git2"]

