[package]
name = "code_guardian_cli"
version = "1.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/d-oit/code-guardian"
keywords = ["security", "scanning", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = "4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
config = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true, optional = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }

code-guardian-core = { path = "../core" }
code-guardian-storage = { path = "../storage" }
code-guardian-output = { path = "../output" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
futures = "0.3"
mockall = "0.12"
proptest = { workspace = true }

[features]
default = []
git = ["git2"]
