[package]
name = "code-guardian-core"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"
dashmap = "5.5"
config = { workspace = true }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
memmap2 = "0.9"
 smallvec = { version = "1.13", features = ["union"] }
 aho-corasick = "1.1"

 tracing = "0.1"
 sysinfo = "0.30"
 tokio = { workspace = true, features = ["signal"] }
axum = "0.7"
prometheus = "0.14"
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"
mockall = "0.12"
insta = "1.39"
proptest = "1.0"
tokio-test = "0.4"

[[bench]]
name = "scanner_benchmark"
harness = false
