[package]
name = "code-guardian-output"
version = "0.2.1"
edition = "2021"
keywords = ["security", "scanning", "output"]
categories = ["development-tools"]

[dependencies]
code-guardian-core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
csv = "1.1"

[dev-dependencies]
proptest = { workspace = true }
