[package]
name = "code-guardian-storage"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
refinery = { version = "0.8", features = ["rusqlite"] }
code-guardian-core = { path = "../core" }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
