[package]
name = "code-guardian-storage"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/d-oit/code-guardian"
keywords = ["security", "scanning", "storage"]
categories = ["database", "development-tools"]
include = ["migrations/"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
refinery = { version = "0.8", features = ["rusqlite"] }
code-guardian-core = { path = "../core" }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
